--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
     font-size: 8em;
   }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
 	  h1 {
     font-size: 15em;
   }
@@ -45,12 +45,27 @@ body {
     font-weight: normal;
   }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
 	  h2 {
     font-size: 2.5em;
     font-weight: normal;
   }
 }
+
+/* Credits header */
+.credits {
+    font-size: 1.5em;
+    font-weight: normal;
+  }
+
+@media screen and (min-width: 768px) {
+	  .credits {
+    font-size: 1.5em;
+    font-weight: normal;
+	text-align: right;
+  }
+}
+
 
 h4 {
   font-family: Helvetica, Roboto, Sans-Serif;
@@ -63,22 +78,40 @@ h4 {
   color: white;
 }
 
+a {
+	text-decoration: none;
+}
+
+/* navigation */
 .navi:link, .navi:visited, .navi:hover, .navi:active {
     font-size: 4em;
     font-weight: normal;
 	left: 1.25%;
 	text-decoration: none;
+	text-align: left;
   }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
 	.navi:link, .navi:visited, .navi:hover, .navi:active  {
     font-size: 3em;
     font-weight: normal;
 	left: 1.25%;
 	text-decoration: none;
+	text-align: center;
   }
 }
 
+@media (prefers-color-scheme: light) {
+	.navi:link, .navi:visited, .navi:hover, .navi:active  {
+		color: black;
+	}
+  }
+
+  @media (prefers-color-scheme: dark) {
+	.navi:link, .navi:visited, .navi:hover, .navi:active  {
+		color: white;
+	}
+  }
 
 @media (prefers-color-scheme: light) {
   body {
